force-app/main/default/objects/clariti__Cart__c/clariti__Cart__c.object-meta.xml
<CustomObject>
    <description>Cart is used to process the transaction for a collection of cart items</description>
    <label>Cart</label>
    <nameField>
        <displayFormat>C-{MM}{DD}{YYYY}-{000}</displayFormat>
        <label>Cart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>