force-app/main/default/objects/clariti__Cart__c/fields/clariti__Account__c.field-meta.xml
<CustomField>
    <fullName>clariti__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account is associated with the cart transaction.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>