force-app/main/default/objects/clariti__Cart__c/fields/clariti__BillingContact__c.field-meta.xml
<CustomField>
    <fullName>clariti__BillingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>