force-app/main/default/objects/clariti__Cart__c/fields/clariti__BillingEmail__c.field-meta.xml
<CustomField>
    <fullName>clariti__BillingEmail__c</fullName>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>