force-app/main/default/objects/clariti__Cart__c/fields/clariti__CartType__c.field-meta.xml
<CustomField>
    <fullName>clariti__CartType__c</fullName>
    <label>Cart Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cashier Cart</fullName>
                <default>true</default>
                <label>Cashier Cart</label>
            </value>
            <value>
                <fullName>Portal Cart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>