force-app/main/default/objects/clariti__Cart__c/fields/clariti__FailureReason__c.field-meta.xml
<CustomField>
    <fullName>clariti__FailureReason__c</fullName>
    <description>States the reason for failed status of cart.</description>
    <label>Failure Reason</label>
    <type>TextArea</type>
</CustomField>