force-app/main/default/objects/clariti__Cart__c/fields/clariti__PaymentBatch__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentBatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Batch</label>
    <referenceTo>clariti__PaymentBatch__c</referenceTo>
    <relationshipLabel>Cart Transactions</relationshipLabel>
    <relationshipName>CartTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>