force-app/main/default/objects/clariti__Cart__c/fields/clariti__Timeout_Date__c.field-meta.xml
<CustomField>
    <fullName>clariti__Timeout_Date__c</fullName>
    <label>Timeout Date</label>
    <type>DateTime</type>
</CustomField>