force-app/main/default/objects/clariti__Cart__c/validationRules/clariti__PreventLockedCartEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__PreventLockedCartEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  !ISNEW(),
  !ISCHANGED(clariti__Timeout_Date__c),
  clariti__Timeout_Date__c &gt; NOW()
)</errorConditionFormula>
    <errorMessage>This cart is locked and cannot be modified. Please wait a few minutes for it to unlock and try again.</errorMessage>
</ValidationRule>